@@ -30,7 +30,7 @@ class CacheViewPurge extends JView
 
 	protected function _setToolbar()
 	{
-		JSubMenuHelper::addEntry(JText::_('Back to Clean Cache Admin'), 'index.php?option=com_cache', false);
+		JSubMenuHelper::addEntry(JText::_('COM_CACHE_BACK_CACHE_MANAGER'), 'index.php?option=com_cache', false);
 
 		JToolBarHelper::title(JText::_('Cache Manager - Purge Cache Admin'), 'purge.png');
 		JToolBarHelper::custom('purge', 'delete.png', 'delete_f2.png', 'Purge expired', false);
