@@ -64,6 +64,7 @@ class RedirectViewLinks extends JView
 		JToolBarHelper::custom('link.publish', 'publish.png', 'publish_f2.png', 'Publish', true);
 		JToolBarHelper::custom('link.unpublish', 'unpublish.png', 'unpublish_f2.png', 'Unpublish', true);
 		JToolBarHelper::custom('link.activate', 'default.png', 'default_f2.png', 'Activate', true);
+		JToolBarHelper::divider();
 		JToolBarHelper::custom('link.archive', 'archive.png', 'archive_f2.png', 'Archive', true);
 		JToolBarHelper::deleteList('','link.delete', 'delete');
 		// The live below was causing an error so replaced with line above.
