@@ -143,6 +143,8 @@ CONFIG_COOKIE_PATH_LABEL=Cookie Path
 CONFIG_COOKIE_PATH_DESC=Path the cookie should be valid for.
 
 
+COM_CHECKIN_CONFIGURATION=Global Check-in Settings
+
 
 CONFIG_RULES_LABEL=Set global permissions for actions and groups here.
 
